--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Challenge by Coodesh",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon ./src/index.js"
   },
   "repository": {
