--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "knex": "^1.0.5",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "swagger-autogen": "^2.21.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
